@@ -1,6 +1,6 @@
 Package: xcms
-Version: 1.21.1
-Date: 2009-10-19
+Version: 1.21.2
+Date: 2009-11-08
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
