@@ -62,6 +62,7 @@ exportMethods(
               "mzrange",
               "peaks",
               "peaks<-",
+              "peakTable",
               "phenoData",
               "phenoData<-",
               "plotChrom",
