@@ -1,3 +1,6 @@
+2009-11-08: 1.21.2: 
+R/xcmsSet.R: added peakTable()
+
 2009-10-28: 1.21.1: 
 added a check for grouped xcmsSet with NA values (i.e. without fillPeaks()) to diffreport() 
 
